--- a/Part-3/Style.css
+++ b/Part-3/Style.css
@@ -1,9 +1,44 @@
 *{
-    background-color: gray;
+    background-color: rgb(165, 123, 182);
+    margin: 0px;
 }
 .inputs{
     background-color: aliceblue;
     padding: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     margin: 5px;
+    border-radius: 10px;
+}
+.texts{
+    font-family: sans-serif;
+    color: aliceblue;
+}
+.buttons{
+    background-color: rgb(76, 47, 102);
+    font-family: sans-serif;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+}
+.container{
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nav-bar{
+    background-color: rgb(76, 47, 102);
+    height: 20%;
+    width: 94.7%;
+    padding: 50px;
+    margin: 0px;
+    align-content: center;
+}
+.lilac{
+    background-color: rgb(219, 180, 235);
+    height: 10%;
+    width: 35%;
+    border-radius: 10px;
+    align-content: center;
+    padding: 6%;
 }
