--- a/Part-4/test-part4/src/index.css
+++ b/Part-4/test-part4/src/index.css
@@ -37,8 +37,7 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -56,13 +55,13 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #000000;
-    background-color: #707070;
+    color: #230441;
+    background-color: #e6aefc;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #8b8b8b;
+    background-color: #e6aefc;
   }
 }
